import com.example.feature.currency.Currency;
import com.example.feature.currency.CurrencyService;
import com.example.feature.currency.PrivatBankCurrencyService;
import com.example.feature.telegram.TelegramBotService;

/**
 *
 */
public class TelegramBotApp {
    public static void main(String[] args) {
        TelegramBotService botService = new TelegramBotService();
    }
}
