package com.example.feature.currency;

/**
 * Class that represents currencies as a currency code.
 */
public enum Currency {
    USD,
    EUR,
    UAH
}
