package com.example.feature.telegram;

public class BotConstants {
    public static final String BotName = "Java190125CurrencyBot";
    public static final String BotTocken = "7768244650:AAGYR7IW5NT7KKe8dBrDIlhUylztyLgWokE";
}
