@startuml

stereotype "Library"{
    Jsoup
    Gson
    TelegramBots
    TelegramBotsExtensions
}

"Library" <.. "Application" : use
package "TelegramAPI"{
}
package "PrivarAPI"{
}

package "Application"{
    class TelegramBotApp

    package "currency"{

        interface CurrencyService{
            + getRate(Currency c) : double
        }

        class PrivatBankCurrencyService

        enum Currency{
            USD
            EUR
            UAH
        }

        PrivatBankCurrencyService --|> CurrencyService
        PrivatBankCurrencyService --> "PrivarAPI"
    }

    package "telegram"{
        class BotConstants
        class TelegramBotService
        class CurrencyTelegramBot
        package "commands"{
            class HelpCommand
            class StartCommand
        }

        TelegramBotService --> "TelegramAPI"
        TelegramBotService -- CurrencyTelegramBot
        CurrencyTelegramBot --> "commands"
        "commands" --> "TelegramAPI"
    }

    TelegramBotApp --> TelegramBotService

}

@enduml